

square.big_DATA = square.big/*.png
square.bigdir = $(datadir)/map-icons/square.big

square.big_sightseeing_DATA = square.big/sightseeing/*.png
square.big_sightseeingdir = $(datadir)/map-icons/square.big/sightseeing

square.big_waypoint_DATA = square.big/waypoint/*.png
square.big_waypointdir = $(datadir)/map-icons/square.big/waypoint

square.big_waypoint_wpttemp_DATA = square.big/waypoint/wpttemp/*.png
square.big_waypoint_wpttempdir = $(datadir)/map-icons/square.big/waypoint/wpttemp

square.big_accommodation_DATA = square.big/accommodation/*.png
square.big_accommodationdir = $(datadir)/map-icons/square.big/accommodation

square.big_accommodation_hotel_DATA = square.big/accommodation/hotel/*.png
square.big_accommodation_hoteldir = $(datadir)/map-icons/square.big/accommodation/hotel

square.big_accommodation_camping_DATA = square.big/accommodation/camping/*.png
square.big_accommodation_campingdir = $(datadir)/map-icons/square.big/accommodation/camping

square.big_wlan_DATA = square.big/wlan/*.png
square.big_wlandir = $(datadir)/map-icons/square.big/wlan

square.big_wlan_pay_DATA = square.big/wlan/pay/*.png
square.big_wlan_paydir = $(datadir)/map-icons/square.big/wlan/pay

square.big_geocache_DATA = square.big/geocache/*.png
square.big_geocachedir = $(datadir)/map-icons/square.big/geocache

square.big_geocache_geocache_multi_DATA = square.big/geocache/geocache_multi/*.png
square.big_geocache_geocache_multidir = $(datadir)/map-icons/square.big/geocache/geocache_multi

square.big_health_DATA = square.big/health/*.png
square.big_healthdir = $(datadir)/map-icons/square.big/health

square.big_money_DATA = square.big/money/*.png
square.big_moneydir = $(datadir)/map-icons/square.big/money

square.big_money_atm_DATA = square.big/money/atm/*.png
square.big_money_atmdir = $(datadir)/map-icons/square.big/money/atm

square.big_money_bank_DATA = square.big/money/bank/*.png
square.big_money_bankdir = $(datadir)/map-icons/square.big/money/bank

square.big_nautical_DATA = square.big/nautical/*.png
square.big_nauticaldir = $(datadir)/map-icons/square.big/nautical

square.big_food_DATA = square.big/food/*.png
square.big_fooddir = $(datadir)/map-icons/square.big/food

square.big_food_restaurant_DATA = square.big/food/restaurant/*.png
square.big_food_restaurantdir = $(datadir)/map-icons/square.big/food/restaurant

square.big_food_fastfood_DATA = square.big/food/fastfood/*.png
square.big_food_fastfooddir = $(datadir)/map-icons/square.big/food/fastfood

square.big_food_machine_DATA = square.big/food/machine/*.png
square.big_food_machinedir = $(datadir)/map-icons/square.big/food/machine

square.big_recreation_DATA = square.big/recreation/*.png
square.big_recreationdir = $(datadir)/map-icons/square.big/recreation

square.big_sports_DATA = square.big/sports/*.png
square.big_sportsdir = $(datadir)/map-icons/square.big/sports

square.big_misc_DATA = square.big/misc/*.png
square.big_miscdir = $(datadir)/map-icons/square.big/misc

square.big_places_DATA = square.big/places/*.png
square.big_placesdir = $(datadir)/map-icons/square.big/places

square.big_places_settlement_DATA = square.big/places/settlement/*.png
square.big_places_settlementdir = $(datadir)/map-icons/square.big/places/settlement

square.big_vehicle_DATA = square.big/vehicle/*.png
square.big_vehicledir = $(datadir)/map-icons/square.big/vehicle

square.big_vehicle_car_rental_DATA = square.big/vehicle/car_rental/*.png
square.big_vehicle_car_rentaldir = $(datadir)/map-icons/square.big/vehicle/car_rental

square.big_vehicle_parking_DATA = square.big/vehicle/parking/*.png
square.big_vehicle_parkingdir = $(datadir)/map-icons/square.big/vehicle/parking

square.big_vehicle_fuel_station_DATA = square.big/vehicle/fuel_station/*.png
square.big_vehicle_fuel_stationdir = $(datadir)/map-icons/square.big/vehicle/fuel_station

square.big_education_DATA = square.big/education/*.png
square.big_educationdir = $(datadir)/map-icons/square.big/education

square.big_education_school_DATA = square.big/education/school/*.png
square.big_education_schooldir = $(datadir)/map-icons/square.big/education/school

square.big_shopping_DATA = square.big/shopping/*.png
square.big_shoppingdir = $(datadir)/map-icons/square.big/shopping

square.big_shopping_furniture_DATA = square.big/shopping/furniture/*.png
square.big_shopping_furnituredir = $(datadir)/map-icons/square.big/shopping/furniture

square.big_shopping_groceries_DATA = square.big/shopping/groceries/*.png
square.big_shopping_groceriesdir = $(datadir)/map-icons/square.big/shopping/groceries

square.big_shopping_sports_DATA = square.big/shopping/sports/*.png
square.big_shopping_sportsdir = $(datadir)/map-icons/square.big/shopping/sports

square.big_shopping_vehicle_DATA = square.big/shopping/vehicle/*.png
square.big_shopping_vehicledir = $(datadir)/map-icons/square.big/shopping/vehicle

square.big_shopping_machine_DATA = square.big/shopping/machine/*.png
square.big_shopping_machinedir = $(datadir)/map-icons/square.big/shopping/machine

square.big_shopping_supermarket_DATA = square.big/shopping/supermarket/*.png
square.big_shopping_supermarketdir = $(datadir)/map-icons/square.big/shopping/supermarket

square.big_shopping_media_DATA = square.big/shopping/media/*.png
square.big_shopping_mediadir = $(datadir)/map-icons/square.big/shopping/media

square.big_shopping_diy_store_DATA = square.big/shopping/diy_store/*.png
square.big_shopping_diy_storedir = $(datadir)/map-icons/square.big/shopping/diy_store

square.big_shopping_rental_DATA = square.big/shopping/rental/*.png
square.big_shopping_rentaldir = $(datadir)/map-icons/square.big/shopping/rental

square.big_shopping_games_DATA = square.big/shopping/games/*.png
square.big_shopping_gamesdir = $(datadir)/map-icons/square.big/shopping/games

square.big_public_DATA = square.big/public/*.png
square.big_publicdir = $(datadir)/map-icons/square.big/public

square.big_public_inspecting_authority_DATA = square.big/public/inspecting-authority/*.png
square.big_public_inspecting_authoritydir = $(datadir)/map-icons/square.big/public/inspecting-authority

square.big_public_recycling_DATA = square.big/public/recycling/*.png
square.big_public_recyclingdir = $(datadir)/map-icons/square.big/public/recycling

square.big_public_recycling_container_DATA = square.big/public/recycling/container/*.png
square.big_public_recycling_containerdir = $(datadir)/map-icons/square.big/public/recycling/container

square.big_public_administration_DATA = square.big/public/administration/*.png
square.big_public_administrationdir = $(datadir)/map-icons/square.big/public/administration

square.big_people_DATA = square.big/people/*.png
square.big_peopledir = $(datadir)/map-icons/square.big/people

square.big_people_friendsd_DATA = square.big/people/friendsd/*.png
square.big_people_friendsddir = $(datadir)/map-icons/square.big/people/friendsd

square.big_people_developer_DATA = square.big/people/developer/*.png
square.big_people_developerdir = $(datadir)/map-icons/square.big/people/developer

square.big_religion_DATA = square.big/religion/*.png
square.big_religiondir = $(datadir)/map-icons/square.big/religion

square.big_religion_church_DATA = square.big/religion/church/*.png
square.big_religion_churchdir = $(datadir)/map-icons/square.big/religion/church

square.big_transport_DATA = square.big/transport/*.png
square.big_transportdir = $(datadir)/map-icons/square.big/transport


square.small_DATA = square.small/*.png
square.smalldir = $(datadir)/map-icons/square.small

square.small_sightseeing_DATA = square.small/sightseeing/*.png
square.small_sightseeingdir = $(datadir)/map-icons/square.small/sightseeing

square.small_waypoint_DATA = square.small/waypoint/*.png
square.small_waypointdir = $(datadir)/map-icons/square.small/waypoint

square.small_waypoint_wpttemp_DATA = square.small/waypoint/wpttemp/*.png
square.small_waypoint_wpttempdir = $(datadir)/map-icons/square.small/waypoint/wpttemp

square.small_accommodation_DATA = square.small/accommodation/*.png
square.small_accommodationdir = $(datadir)/map-icons/square.small/accommodation

square.small_wlan_DATA = square.small/wlan/*.png
square.small_wlandir = $(datadir)/map-icons/square.small/wlan

square.small_wlan_pay_DATA = square.small/wlan/pay/*.png
square.small_wlan_paydir = $(datadir)/map-icons/square.small/wlan/pay

square.small_geocache_DATA = square.small/geocache/*.png
square.small_geocachedir = $(datadir)/map-icons/square.small/geocache

square.small_geocache_geocache_multi_DATA = square.small/geocache/geocache_multi/*.png
square.small_geocache_geocache_multidir = $(datadir)/map-icons/square.small/geocache/geocache_multi

square.small_health_DATA = square.small/health/*.png
square.small_healthdir = $(datadir)/map-icons/square.small/health

square.small_money_DATA = square.small/money/*.png
square.small_moneydir = $(datadir)/map-icons/square.small/money

square.small_nautical_DATA = square.small/nautical/*.png
square.small_nauticaldir = $(datadir)/map-icons/square.small/nautical

square.small_food_DATA = square.small/food/*.png
square.small_fooddir = $(datadir)/map-icons/square.small/food

square.small_food_fastfood_DATA = square.small/food/fastfood/*.png
square.small_food_fastfooddir = $(datadir)/map-icons/square.small/food/fastfood

square.small_recreation_DATA = square.small/recreation/*.png
square.small_recreationdir = $(datadir)/map-icons/square.small/recreation

square.small_sports_DATA = square.small/sports/*.png
square.small_sportsdir = $(datadir)/map-icons/square.small/sports

square.small_misc_DATA = square.small/misc/*.png
square.small_miscdir = $(datadir)/map-icons/square.small/misc

square.small_places_DATA = square.small/places/*.png
square.small_placesdir = $(datadir)/map-icons/square.small/places

square.small_places_settlement_DATA = square.small/places/settlement/*.png
square.small_places_settlementdir = $(datadir)/map-icons/square.small/places/settlement

square.small_vehicle_DATA = square.small/vehicle/*.png
square.small_vehicledir = $(datadir)/map-icons/square.small/vehicle

square.small_vehicle_fuel_station_DATA = square.small/vehicle/fuel_station/*.png
square.small_vehicle_fuel_stationdir = $(datadir)/map-icons/square.small/vehicle/fuel_station

square.small_education_DATA = square.small/education/*.png
square.small_educationdir = $(datadir)/map-icons/square.small/education

square.small_shopping_DATA = square.small/shopping/*.png
square.small_shoppingdir = $(datadir)/map-icons/square.small/shopping

square.small_shopping_supermarket_DATA = square.small/shopping/supermarket/*.png
square.small_shopping_supermarketdir = $(datadir)/map-icons/square.small/shopping/supermarket

square.small_shopping_diy_store_DATA = square.small/shopping/diy_store/*.png
square.small_shopping_diy_storedir = $(datadir)/map-icons/square.small/shopping/diy_store

square.small_public_DATA = square.small/public/*.png
square.small_publicdir = $(datadir)/map-icons/square.small/public

square.small_people_DATA = square.small/people/*.png
square.small_peopledir = $(datadir)/map-icons/square.small/people

square.small_people_friendsd_DATA = square.small/people/friendsd/*.png
square.small_people_friendsddir = $(datadir)/map-icons/square.small/people/friendsd

square.small_people_developer_DATA = square.small/people/developer/*.png
square.small_people_developerdir = $(datadir)/map-icons/square.small/people/developer

square.small_religion_DATA = square.small/religion/*.png
square.small_religiondir = $(datadir)/map-icons/square.small/religion

square.small_transport_DATA = square.small/transport/*.png
square.small_transportdir = $(datadir)/map-icons/square.small/transport



svg_tn_DATA = svg_tn/*.png
svg_tndir = $(datadir)/map-icons/svg_tn

svg_tn_incomming_DATA = svg_tn/incomming/*.png
svg_tn_incommingdir = $(datadir)/map-icons/svg_tn/incomming

svg_tn_accommodation_DATA = svg_tn/accommodation/*.png
svg_tn_accommodationdir = $(datadir)/map-icons/svg_tn/accommodation

svg_tn_accommodation_camping_DATA = svg_tn/accommodation/camping/*.png
svg_tn_accommodation_campingdir = $(datadir)/map-icons/svg_tn/accommodation/camping

svg_tn_health_DATA = svg_tn/health/*.png
svg_tn_healthdir = $(datadir)/map-icons/svg_tn/health

svg_tn_food_DATA = svg_tn/food/*.png
svg_tn_fooddir = $(datadir)/map-icons/svg_tn/food

svg_tn_recreation_DATA = svg_tn/recreation/*.png
svg_tn_recreationdir = $(datadir)/map-icons/svg_tn/recreation

svg_tn_sports_DATA = svg_tn/sports/*.png
svg_tn_sportsdir = $(datadir)/map-icons/svg_tn/sports

svg_tn_vehicle_DATA = svg_tn/vehicle/*.png
svg_tn_vehicledir = $(datadir)/map-icons/svg_tn/vehicle

svg_tn_education_DATA = svg_tn/education/*.png
svg_tn_educationdir = $(datadir)/map-icons/svg_tn/education

svg_tn_shopping_DATA = svg_tn/shopping/*.png
svg_tn_shoppingdir = $(datadir)/map-icons/svg_tn/shopping

svg_tn_shopping_rental_DATA = svg_tn/shopping/rental/*.png
svg_tn_shopping_rentaldir = $(datadir)/map-icons/svg_tn/shopping/rental

svg_tn_public_DATA = svg_tn/public/*.png
svg_tn_publicdir = $(datadir)/map-icons/svg_tn/public

svg_tn_public_recycling_DATA = svg_tn/public/recycling/*.png
svg_tn_public_recyclingdir = $(datadir)/map-icons/svg_tn/public/recycling

svg_tn_religion_DATA = svg_tn/religion/*.png
svg_tn_religiondir = $(datadir)/map-icons/svg_tn/religion

svg_tn_religion_church_DATA = svg_tn/religion/church/*.png
svg_tn_religion_churchdir = $(datadir)/map-icons/svg_tn/religion/church

svg_tn_transport_DATA = svg_tn/transport/*.png
svg_tn_transportdir = $(datadir)/map-icons/svg_tn/transport



jp_tn_DATA = jp_tn/*.png
jp_tndir = $(datadir)/map-icons/jp_tn

jp_tn_incomming_DATA = jp_tn/incomming/*.png
jp_tn_incommingdir = $(datadir)/map-icons/jp_tn/incomming

jp_tn_sightseeing_DATA = jp_tn/sightseeing/*.png
jp_tn_sightseeingdir = $(datadir)/map-icons/jp_tn/sightseeing

jp_tn_health_DATA = jp_tn/health/*.png
jp_tn_healthdir = $(datadir)/map-icons/jp_tn/health

jp_tn_education_school_DATA = jp_tn/education/school/*.png
jp_tn_education_schooldir = $(datadir)/map-icons/jp_tn/education/school

jp_tn_shopping_rental_DATA = jp_tn/shopping/rental/*.png
jp_tn_shopping_rentaldir = $(datadir)/map-icons/jp_tn/shopping/rental

jp_tn_public_DATA = jp_tn/public/*.png
jp_tn_publicdir = $(datadir)/map-icons/jp_tn/public

jp_tn_public_administration_DATA = jp_tn/public/administration/*.png
jp_tn_public_administrationdir = $(datadir)/map-icons/jp_tn/public/administration

jp_tn_transport_ferry_DATA = jp_tn/transport/ferry/*.png
jp_tn_transport_ferrydir = $(datadir)/map-icons/jp_tn/transport/ferry


classic.small_incomming_DATA = classic.small/incomming/*.png
classic.small_incommingdir = $(datadir)/map-icons/classic.small/incomming

classic.small_sightseeing_DATA = classic.small/sightseeing/*.png
classic.small_sightseeingdir = $(datadir)/map-icons/classic.small/sightseeing

classic.small_accommodation_DATA = classic.small/accommodation/*.png
classic.small_accommodationdir = $(datadir)/map-icons/classic.small/accommodation

classic.small_food_DATA = classic.small/food/*.png
classic.small_fooddir = $(datadir)/map-icons/classic.small/food

classic.small_recreation_DATA = classic.small/recreation/*.png
classic.small_recreationdir = $(datadir)/map-icons/classic.small/recreation

classic.small_places_DATA = classic.small/places/*.png
classic.small_placesdir = $(datadir)/map-icons/classic.small/places

classic.small_vehicle_DATA = classic.small/vehicle/*.png
classic.small_vehicledir = $(datadir)/map-icons/classic.small/vehicle

classic.small_religion_DATA = classic.small/religion/*.png
classic.small_religiondir = $(datadir)/map-icons/classic.small/religion

classic.small_transport_DATA = classic.small/transport/*.png
classic.small_transportdir = $(datadir)/map-icons/classic.small/transport


classic.big_DATA = classic.big/*.png
classic.bigdir = $(datadir)/map-icons/classic.big

classic.big_sightseeing_DATA = classic.big/sightseeing/*.png
classic.big_sightseeingdir = $(datadir)/map-icons/classic.big/sightseeing

classic.big_waypoint_DATA = classic.big/waypoint/*.png
classic.big_waypointdir = $(datadir)/map-icons/classic.big/waypoint

classic.big_waypoint_wpttemp_DATA = classic.big/waypoint/wpttemp/*.png
classic.big_waypoint_wpttempdir = $(datadir)/map-icons/classic.big/waypoint/wpttemp

classic.big_accommodation_DATA = classic.big/accommodation/*.png
classic.big_accommodationdir = $(datadir)/map-icons/classic.big/accommodation

classic.big_accommodation_camping_DATA = classic.big/accommodation/camping/*.png
classic.big_accommodation_campingdir = $(datadir)/map-icons/classic.big/accommodation/camping

classic.big_wlan_DATA = classic.big/wlan/*.png
classic.big_wlandir = $(datadir)/map-icons/classic.big/wlan

classic.big_wlan_pay_DATA = classic.big/wlan/pay/*.png
classic.big_wlan_paydir = $(datadir)/map-icons/classic.big/wlan/pay

classic.big_geocache_DATA = classic.big/geocache/*.png
classic.big_geocachedir = $(datadir)/map-icons/classic.big/geocache

classic.big_health_DATA = classic.big/health/*.png
classic.big_healthdir = $(datadir)/map-icons/classic.big/health

classic.big_money_DATA = classic.big/money/*.png
classic.big_moneydir = $(datadir)/map-icons/classic.big/money

classic.big_money_bank_DATA = classic.big/money/bank/*.png
classic.big_money_bankdir = $(datadir)/map-icons/classic.big/money/bank

classic.big_nautical_DATA = classic.big/nautical/*.png
classic.big_nauticaldir = $(datadir)/map-icons/classic.big/nautical

classic.big_food_DATA = classic.big/food/*.png
classic.big_fooddir = $(datadir)/map-icons/classic.big/food

classic.big_food_restaurant_DATA = classic.big/food/restaurant/*.png
classic.big_food_restaurantdir = $(datadir)/map-icons/classic.big/food/restaurant

classic.big_food_fastfood_DATA = classic.big/food/fastfood/*.png
classic.big_food_fastfooddir = $(datadir)/map-icons/classic.big/food/fastfood

classic.big_food_snacks_DATA = classic.big/food/snacks/*.png
classic.big_food_snacksdir = $(datadir)/map-icons/classic.big/food/snacks

classic.big_recreation_DATA = classic.big/recreation/*.png
classic.big_recreationdir = $(datadir)/map-icons/classic.big/recreation

classic.big_sports_DATA = classic.big/sports/*.png
classic.big_sportsdir = $(datadir)/map-icons/classic.big/sports

classic.big_misc_DATA = classic.big/misc/*.png
classic.big_miscdir = $(datadir)/map-icons/classic.big/misc

classic.big_misc_information_DATA = classic.big/misc/information/*.png
classic.big_misc_informationdir = $(datadir)/map-icons/classic.big/misc/information

classic.big_places_DATA = classic.big/places/*.png
classic.big_placesdir = $(datadir)/map-icons/classic.big/places

classic.big_places_settlement_DATA = classic.big/places/settlement/*.png
classic.big_places_settlementdir = $(datadir)/map-icons/classic.big/places/settlement

classic.big_vehicle_DATA = classic.big/vehicle/*.png
classic.big_vehicledir = $(datadir)/map-icons/classic.big/vehicle

classic.big_vehicle_car_rental_DATA = classic.big/vehicle/car_rental/*.png
classic.big_vehicle_car_rentaldir = $(datadir)/map-icons/classic.big/vehicle/car_rental

classic.big_vehicle_parking_DATA = classic.big/vehicle/parking/*.png
classic.big_vehicle_parkingdir = $(datadir)/map-icons/classic.big/vehicle/parking

classic.big_vehicle_fuel_station_DATA = classic.big/vehicle/fuel_station/*.png
classic.big_vehicle_fuel_stationdir = $(datadir)/map-icons/classic.big/vehicle/fuel_station

classic.big_education_DATA = classic.big/education/*.png
classic.big_educationdir = $(datadir)/map-icons/classic.big/education

classic.big_education_school_DATA = classic.big/education/school/*.png
classic.big_education_schooldir = $(datadir)/map-icons/classic.big/education/school

classic.big_shopping_DATA = classic.big/shopping/*.png
classic.big_shoppingdir = $(datadir)/map-icons/classic.big/shopping

classic.big_shopping_groceries_DATA = classic.big/shopping/groceries/*.png
classic.big_shopping_groceriesdir = $(datadir)/map-icons/classic.big/shopping/groceries

classic.big_shopping_supermarket_DATA = classic.big/shopping/supermarket/*.png
classic.big_shopping_supermarketdir = $(datadir)/map-icons/classic.big/shopping/supermarket

classic.big_public_DATA = classic.big/public/*.png
classic.big_publicdir = $(datadir)/map-icons/classic.big/public

classic.big_people_DATA = classic.big/people/*.png
classic.big_peopledir = $(datadir)/map-icons/classic.big/people

classic.big_religion_DATA = classic.big/religion/*.png
classic.big_religiondir = $(datadir)/map-icons/classic.big/religion

classic.big_transport_DATA = classic.big/transport/*.png
classic.big_transportdir = $(datadir)/map-icons/classic.big/transport

classic.big_transport_ferry_DATA = classic.big/transport/ferry/*.png
classic.big_transport_ferrydir = $(datadir)/map-icons/classic.big/transport/ferry

classic.big_transport_bridge_DATA = classic.big/transport/bridge/*.png
classic.big_transport_bridgedir = $(datadir)/map-icons/classic.big/transport/bridge


nickw_DATA = nickw/*.png
nickwdir = $(datadir)/map-icons/nickw



EXTRA_DIST= \
	$(square.big_DATA) \
	$(square.big_sightseeing_DATA) \
	$(square.big_waypoint_DATA) \
	$(square.big_waypoint_wpttemp_DATA) \
	$(square.big_accommodation_DATA) \
	$(square.big_accommodation_hotel_DATA) \
	$(square.big_accommodation_camping_DATA) \
	$(square.big_wlan_DATA) \
	$(square.big_wlan_pay_DATA) \
	$(square.big_geocache_DATA) \
	$(square.big_geocache_geocache_multi_DATA) \
	$(square.big_health_DATA) \
	$(square.big_money_DATA) \
	$(square.big_money_atm_DATA) \
	$(square.big_money_bank_DATA) \
	$(square.big_nautical_DATA) \
	$(square.big_food_DATA) \
	$(square.big_food_restaurant_DATA) \
	$(square.big_food_fastfood_DATA) \
	$(square.big_food_machine_DATA) \
	$(square.big_recreation_DATA) \
	$(square.big_sports_DATA) \
	$(square.big_misc_DATA) \
	$(square.big_places_DATA) \
	$(square.big_places_settlement_DATA) \
	$(square.big_vehicle_DATA) \
	$(square.big_vehicle_car_rental_DATA) \
	$(square.big_vehicle_parking_DATA) \
	$(square.big_vehicle_fuel_station_DATA) \
	$(square.big_education_DATA) \
	$(square.big_education_school_DATA) \
	$(square.big_shopping_DATA) \
	$(square.big_shopping_furniture_DATA) \
	$(square.big_shopping_groceries_DATA) \
	$(square.big_shopping_sports_DATA) \
	$(square.big_shopping_vehicle_DATA) \
	$(square.big_shopping_machine_DATA) \
	$(square.big_shopping_supermarket_DATA) \
	$(square.big_shopping_media_DATA) \
	$(square.big_shopping_diy_store_DATA) \
	$(square.big_shopping_rental_DATA) \
	$(square.big_shopping_games_DATA) \
	$(square.big_public_DATA) \
	$(square.big_public_inspecting_authority_DATA) \
	$(square.big_public_recycling_DATA) \
	$(square.big_public_recycling_container_DATA) \
	$(square.big_public_administration_DATA) \
	$(square.big_people_DATA) \
	$(square.big_people_friendsd_DATA) \
	$(square.big_people_developer_DATA) \
	$(square.big_religion_DATA) \
	$(square.big_religion_church_DATA) \
	$(square.big_transport_DATA) \
	$(square.small_DATA) \
	$(square.small_sightseeing_DATA) \
	$(square.small_waypoint_DATA) \
	$(square.small_waypoint_wpttemp_DATA) \
	$(square.small_accommodation_DATA) \
	$(square.small_wlan_DATA) \
	$(square.small_wlan_pay_DATA) \
	$(square.small_geocache_DATA) \
	$(square.small_geocache_geocache_multi_DATA) \
	$(square.small_health_DATA) \
	$(square.small_money_DATA) \
	$(square.small_nautical_DATA) \
	$(square.small_food_DATA) \
	$(square.small_food_fastfood_DATA) \
	$(square.small_recreation_DATA) \
	$(square.small_sports_DATA) \
	$(square.small_misc_DATA) \
	$(square.small_places_DATA) \
	$(square.small_places_settlement_DATA) \
	$(square.small_vehicle_DATA) \
	$(square.small_vehicle_fuel_station_DATA) \
	$(square.small_education_DATA) \
	$(square.small_shopping_DATA) \
	$(square.small_shopping_supermarket_DATA) \
	$(square.small_shopping_diy_store_DATA) \
	$(square.small_public_DATA) \
	$(square.small_people_DATA) \
	$(square.small_people_friendsd_DATA) \
	$(square.small_people_developer_DATA) \
	$(square.small_religion_DATA) \
	$(square.small_transport_DATA) \
	$(svg_tn_DATA) \
	$(svg_tn_incomming_DATA) \
	$(svg_tn_accommodation_DATA) \
	$(svg_tn_accommodation_camping_DATA) \
	$(svg_tn_health_DATA) \
	$(svg_tn_food_DATA) \
	$(svg_tn_recreation_DATA) \
	$(svg_tn_sports_DATA) \
	$(svg_tn_vehicle_DATA) \
	$(svg_tn_education_DATA) \
	$(svg_tn_shopping_DATA) \
	$(svg_tn_shopping_rental_DATA) \
	$(svg_tn_public_DATA) \
	$(svg_tn_public_recycling_DATA) \
	$(svg_tn_religion_DATA) \
	$(svg_tn_religion_church_DATA) \
	$(svg_tn_transport_DATA) \
	$(jp_tn_DATA) \
	$(jp_tn_incomming_DATA) \
	$(jp_tn_sightseeing_DATA) \
	$(jp_tn_health_DATA) \
	$(jp_tn_education_school_DATA) \
	$(jp_tn_shopping_rental_DATA) \
	$(jp_tn_public_DATA) \
	$(jp_tn_public_administration_DATA) \
	$(jp_tn_transport_ferry_DATA) \
	$(classic.small_incomming_DATA) \
	$(classic.small_sightseeing_DATA) \
	$(classic.small_accommodation_DATA) \
	$(classic.small_food_DATA) \
	$(classic.small_recreation_DATA) \
	$(classic.small_places_DATA) \
	$(classic.small_vehicle_DATA) \
	$(classic.small_religion_DATA) \
	$(classic.small_transport_DATA) \
	$(classic.big_DATA) \
	$(classic.big_sightseeing_DATA) \
	$(classic.big_waypoint_DATA) \
	$(classic.big_waypoint_wpttemp_DATA) \
	$(classic.big_accommodation_DATA) \
	$(classic.big_accommodation_camping_DATA) \
	$(classic.big_wlan_DATA) \
	$(classic.big_wlan_pay_DATA) \
	$(classic.big_geocache_DATA) \
	$(classic.big_health_DATA) \
	$(classic.big_money_DATA) \
	$(classic.big_money_bank_DATA) \
	$(classic.big_nautical_DATA) \
	$(classic.big_food_DATA) \
	$(classic.big_food_restaurant_DATA) \
	$(classic.big_food_fastfood_DATA) \
	$(classic.big_food_snacks_DATA) \
	$(classic.big_recreation_DATA) \
	$(classic.big_sports_DATA) \
	$(classic.big_misc_DATA) \
	$(classic.big_misc_information_DATA) \
	$(classic.big_places_DATA) \
	$(classic.big_places_settlement_DATA) \
	$(classic.big_vehicle_DATA) \
	$(classic.big_vehicle_car_rental_DATA) \
	$(classic.big_vehicle_parking_DATA) \
	$(classic.big_vehicle_fuel_station_DATA) \
	$(classic.big_education_DATA) \
	$(classic.big_education_school_DATA) \
	$(classic.big_shopping_DATA) \
	$(classic.big_shopping_groceries_DATA) \
	$(classic.big_shopping_supermarket_DATA) \
	$(classic.big_public_DATA) \
	$(classic.big_people_DATA) \
	$(classic.big_religion_DATA) \
	$(classic.big_transport_DATA) \
	$(classic.big_transport_ferry_DATA) \
	$(classic.big_transport_bridge_DATA) \
	$(nickw_DATA) \
	CMakeLists.txt \
	index.html \
	overview.de.html \
	overview.html \
	create_makefile.sh
